[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/rat.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RatPlayer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RatPlayerHitBox.gd" type="Script" id=3]
[ext_resource path="res://RatPlayer.tres" type="Material" id=4]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=5]
[ext_resource path="res://Sounds/RatScreaming.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/ShootSound.mp3" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 116.667

[node name="RatPlayer" type="Node2D"]
scale = Vector2( 0.06, 0.06 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( -16.6667, -50 )
scale = Vector2( 0.342593, 0.342593 )
texture = ExtResource( 1 )

[node name="RatPlayerHitBox" type="Area2D" parent="."]
script = ExtResource( 3 )
whiten_material = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RatPlayerHitBox"]
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="RatPlayerHitBox"]
wait_time = 0.2

[node name="Gun" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="FireSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="area_entered" from="RatPlayerHitBox" to="." method="_on_RatPlayerHitBox_area_entered"]
[connection signal="area_entered" from="RatPlayerHitBox" to="RatPlayerHitBox" method="_on_RatPlayerHitBox_area_entered"]
[connection signal="timeout" from="RatPlayerHitBox/Timer" to="RatPlayerHitBox" method="_on_Timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="RatPlayerHitBox" method="_on_InvincibleTimer_timeout"]
